--- a/source/BulkCrapUninstaller/Controls/AdvancedClipboardCopy.es.resx
+++ b/source/BulkCrapUninstaller/Controls/AdvancedClipboardCopy.es.resx
@@ -131,5 +131,6 @@
   </data>
   <data name="comboBoxInsert.Items" xml:space="preserve">
     <value>Insertar...</value>
+    <comment>...</comment>
   </data>
 </root>
