--- a/source/BulkCrapUninstaller/Controls/AdvancedClipboardCopy.pt.resx
+++ b/source/BulkCrapUninstaller/Controls/AdvancedClipboardCopy.pt.resx
@@ -131,6 +131,7 @@
   </data>
   <data name="comboBoxInsert.Items" xml:space="preserve">
     <value>Inserir...</value>
+    <comment>...</comment>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
